<resources>
    <string name="app_name">syy</string>
    <string name="syy_movie">电影</string>
    <string name="syy_music">音乐</string>
    <string name="syy_book">读书</string>
    <string name="syy_search">搜索</string>
    <string name="syy_search_hint">搜索影视</string>
    <string name="syy_search_history">历史搜索</string>
    <string name="syy_search_clear">清空</string>
    <string name="syy_search_nodata">啥都没有</string>

    <string-array name="syy_movie_type">
        <item>Top250</item>
        <item>北美票房榜</item>
    </string-array>

    <string-array name="syy_search_type">
        <item>影视</item>
        <item>图书</item>
        <item>音乐</item>
    </string-array>

    <string name="syy_movie_item_noscore">暂无评分</string>

    <string name="syy_movie_detail_oldname">原名：%s</string>
    <string name="syy_movie_detail_nickname">又名：%s</string>
    <string name="syy_movie_detail_area">制片地区：%s</string>

    <string name="syy_movie_intro">关于影片</string>
    <string name="syy_movie_score">豆瓣评分</string>
    <string name="syy_movie_info">简介</string>
    <string name="syy_movie_link">查看评论</string>
    <string name="syy_movie_director">导演</string>
    <string name="syy_movie_casts">主要演员</string>
    <string name="syy_movie_character">影人</string>


    <string name="syy_transition_movie_detail_img">syy_movie_detail_img</string>
    <string name="syy_transition_search_img">syy_transition_search_img</string>
    <string name="syy_transition_search_title">syy_transition_search_title</string>
</resources>
