<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/srl_syy_movie_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar_syy_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/toolbarTheme">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/ctoolbar_syy_movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="left"
                app:contentScrim="@color/colorPrimary"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/iv_syy_movie_detail_avator"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="0.7" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:background="@color/dark_30_percent" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar_syy_movie_detail_title"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="25dp"
                    app:layout_collapseMode="pin"
                    tools:title="假装这个一个1111标题" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>


        <android.support.v4.widget.NestedScrollView
            android:id="@+id/srcoll_syy_movie_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/ll_syy_movie_detail_score"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/white"
                    android:elevation="5dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingEnd="5dp"
                    android:paddingStart="5dp"
                    android:paddingTop="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/syy_movie_score"
                        android:textColor="@color/grey_5"
                        android:textSize="10sp" />

                    <TextView
                        android:id="@+id/tv_syy_movie_detail_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:text="11.1" />

                    <android.support.v7.widget.AppCompatRatingBar
                        android:id="@+id/rating_syy_movie_detail_score"
                        style="@style/RatingBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:rating="1" />

                    <TextView
                        android:id="@+id/tv_syy_movie_detail_noscore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/syy_movie_item_noscore"
                        android:textColor="@color/grey_5"
                        android:textSize="12sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tv_syy_movie_detail_scorenum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:textColor="@color/grey_5"
                        android:textSize="10sp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/tv_syy_movie_detail_info1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/ll_syy_movie_detail_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="123123123" />

                <TextView
                    android:id="@+id/tv_syy_movie_detail_info2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/ll_syy_movie_detail_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_syy_movie_detail_info1"
                    tools:text="123123123" />

                <TextView
                    android:id="@+id/tv_syy_movie_detail_info3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/ll_syy_movie_detail_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_syy_movie_detail_info2"
                    tools:text="wwwwwwwwwwwwdaswwwww" />

                <TextView
                    android:id="@+id/tv_syy_movie_detail_info4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toStartOf="@id/ll_syy_movie_detail_score"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_syy_movie_detail_info3"
                    tools:text="12312sssswwwwwwwwwwww3123" />


                <android.support.constraint.Barrier
                    android:id="@+id/barrier_syy_movie_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="bottom"
                    app:constraint_referenced_ids="tv_syy_movie_detail_info4,ll_syy_movie_detail_score" />

                <View
                    android:id="@+id/divider_1"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@id/barrier_syy_movie_detail"
                    android:layout_height="8dp"
                    style="@style/Divider"/>

                <TextView
                    android:id="@+id/tv_syy_movie_detail_intro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/syy_movie_intro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider_1"
                    android:textColor="@color/grey_8"
                    android:textSize="16sp"
                    />



                <com.xxx.library.views.SpannableTextView
                    android:id="@+id/stv_syy_movie_detail_intro"
                    android:layout_marginEnd="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦啦"
                    app:layout_constraintTop_toBottomOf="@id/tv_syy_movie_detail_intro"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:lineSpacingExtra="2dp"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/tv_syy_movie_detail_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/syy_movie_link"
                    app:layout_constraintTop_toBottomOf="@id/stv_syy_movie_detail_intro"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textColor="@color/blue_3"
                    />

                <View
                    android:id="@+id/divider_2"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_syy_movie_detail_link"
                    android:layout_height="8dp"
                    style="@style/Divider"/>

                <include layout="@layout/common_loading_layout" />


            </android.support.constraint.ConstraintLayout>


        </android.support.v4.widget.NestedScrollView>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_syy_movie_detail_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:src="@drawable/common_svg_share"
            app:backgroundTint="@color/white"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:layout_anchor="@id/srcoll_syy_movie_detail"
            app:layout_anchorGravity="end|bottom|right"
            app:pressedTranslationZ="10dp"
            app:rippleColor="@color/dark_10_percent"
            app:useCompatPadding="true" />
    </android.support.design.widget.CoordinatorLayout>
</android.support.v4.widget.SwipeRefreshLayout>